tests/neg-custom-args/nowarn/nowarn-parser-typer.check
-- [E000] Syntax Error: tests/neg-custom-args/nowarn/nowarn-parser-typer.scala:8:10 ------------------------------------
8 |def t1a = try 1 // error, parser warning
  |          ^^^^^
  |          A try without catch or finally is equivalent to putting
  |          its body in a block; no exceptions are handled.

longer explanation available when compiling with `-explain`
-- [E000] Syntax Error: tests/neg-custom-args/nowarn/nowarn-parser-typer.scala:24:10 -----------------------------------
24 |def t5d = try 1 // error, wrong id
   |          ^^^^^
   |          A try without catch or finally is equivalent to putting
   |          its body in a block; no exceptions are handled.

longer explanation available when compiling with `-explain`
-- [E000] Syntax Error: tests/neg-custom-args/nowarn/nowarn-parser-typer.scala:26:28 -----------------------------------
26 |@nowarn("verbose") def t6 = try 1 // error with details
   |                            ^^^^^
   |                            A try without catch or finally is equivalent to putting
   |                            its body in a block; no exceptions are handled.
Matching filters for @nowarn or -Wconf:
  - id=E0
  - name=EmptyCatchOrFinallyBlock

longer explanation available when compiling with `-explain`
-- [E129] Potential Issue Error: tests/neg-custom-args/nowarn/nowarn-parser-typer.scala:16:11 --------------------------
16 |def t3 = { 1; 2 } // error, the invalid nowarn doesn't silence this warning
   |           ^
   |           A pure expression does nothing in statement position; you may be omitting necessary parentheses

longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/nowarn/nowarn-parser-typer.scala:15:8 --------------------------------------------------
15 |@nowarn("wat?") // error, invalid filter
   |        ^^^^^^
   |        Invalid message filter
   |        unknown filter: wat?
-- Error: tests/neg-custom-args/nowarn/nowarn-parser-typer.scala:23:1 --------------------------------------------------
23 |@nowarn("id=1") // error, unused nowarn
   |^^^^^^^^^^^^^^^
   |@nowarn annotation does not suppress any warnings
